# stick_slip_stack_2023

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_E5v4.slurm  build_s6g1.slurm  environment.yaml  setup.py
.github/workflows/: ci.yml
Run/: CMakeLists.txt  EnsembleInfo.py  build_E5v4.slurm  build_s6g1.slurm  find_completed.py  generate.py  generate_fixed-top.py  job_serial-group.py  main.cpp  myrun_layers=2.py  myrun_layers=3.py  myrun_layers=4.py  myrun_layers=5.py  viewParaview.py  viewParaviewBoundaryConditions.py
Run/stiffness=0d01/: myrun_layers=2.py  myrun_layers=3.py  myrun_layers=4.py  myrun_layers=5.py
Run/stiffness=0d05/: myrun_layers=2.py  myrun_layers=3.py  myrun_layers=4.py  myrun_layers=5.py
Run/stiffness=0d1/: myrun_layers=2.py  myrun_layers=3.py  myrun_layers=4.py  myrun_layers=5.py
Run/stiffness=0d5/: myrun_layers=2.py  myrun_layers=3.py  myrun_layers=4.py  myrun_layers=5.py
RunFixedBoundary/: CMakeLists.txt  branch_from_Run.py  generate.py  job_serial-group.py  main.cpp  truncate_based_on_yieldstrains.py  viewParaview.py
RunFixedLever/: CMakeLists.txt  EnsembleInfo.py  find_completed.py  generate.py  generate_fixed-top.py  job_serial-group.py  main.cpp  viewParaview.py  viewParaviewBoundaryConditions.py
RunFixedTop/: CMakeLists.txt  branch_from_Run.py  build_E5v4.slurm  generate.py  job_serial-group.py  main.cpp  truncate_based_on_yieldstrains.py  viewParaview.py
RunFreeLever/: CMakeLists.txt  EnsembleInfo.py  build_E5v4.slurm  build_s6g1.slurm  find_completed.py  generate.py  job_serial-group.py  main.cpp
data/: plot_layers=2.py  plot_layers=3.py  plot_layers=4.py  plot_layers=5.py
data2/stiffness=0d01/: plot_layers=2.py  plot_layers=3.py  plot_layers=4.py  plot_layers=5.py
data2/stiffness=0d05/: plot_layers=2.py  plot_layers=3.py  plot_layers=4.py  plot_layers=5.py
data2/stiffness=0d1/: plot_layers=2.py  plot_layers=3.py  plot_layers=4.py  plot_layers=5.py
data2/stiffness=0d5/: plot_layers=2.py  plot_layers=3.py  plot_layers=4.py  plot_layers=5.py
mycode_lever/: Experiment.py  FixedLever.py  FreeLever.py  System.py  __init__.py  _version.py  mesh.py  slurm.py  storage.py  system.py  tag.py
tests/: FixedLever.py  FixedLever_historic.h5  FixedLever_historic.py  FreeLever_historic.h5  FreeLever_historic.py  System.py  slurm.py  tag.py
